--- a/client/styles/components/SearchTopBar.module.css
+++ b/client/styles/components/SearchTopBar.module.css
@@ -4,12 +4,13 @@
   width: 100%;
   height: 100vh;
   z-index: 999;
-  transform-origin: top;
-  transition: all cubic-bezier(0.4, 0, 0.2, 1) 2s;
 }
 .container {
   height: 40vh;
   background: white;
+  /* TODO:Fix transformation */
+  transform-origin: top;
+  transition: all cubic-bezier(0.4, 0, 0.2, 1) 2s;
 }
 .line {
   background: #8d8d8d;
